plugins {
	id 'org.springframework.boot' version '2.2.6.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
}

group = 'cc.js'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
		
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	compile("com.h2database:h2")
	
	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
	compile group: 'commons-io', name: 'commons-io', version: '2.6'
	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.15'

   // compile 'org.projectlombok:lombok:1.18.6'
   
   	annotationProcessor 'org.projectlombok:lombok:1.18.2' 
	compileOnly 'org.projectlombok:lombok:1.18.2' 
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.2' 
	testCompileOnly 'org.projectlombok:lombok:1.18.2'
   
	compile group: 'com.google.guava', name: 'guava', version: '27.1-jre'
	
	//compile group: 'io.swagger', name: 'swagger-annotations', version: '1.5.22'
    compile group: 'com.spring4all', name: 'swagger-spring-boot-starter', version: '1.8.0.RELEASE'
	
	//implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	//testImplementation 'org.springframework.security:spring-security-test'
}

